spacing issue

--- a/app/(site)/index.scss
+++ b/app/(site)/index.scss
@@ -178,19 +178,20 @@ video {
     display: none;
     z-index: 2;
     position: fixed;
-    left: calc(18% + 40px);
+    left: calc(18% + 28px);
     border-right: 1px solid rgb(247, 246, 240);
     background: rgb(247, 246, 240);
     width: 18%;
-    padding-right: 30px;
+    padding-right: 28px;
     height: 100vh;
     top: 0;
     .missionInner {
         background: rgb(247, 246, 240);
         width: 100%;
-        padding-right: 30px;
+        padding-right: 28px;
+        padding-left: 10px;
         border-right: 1px solid #dadbdd;
-        height: calc(100vh - 30px);
+        height: calc(100vh - 28px);
         position: relative;
         top: 10px;
         h1 {
@@ -224,19 +225,20 @@ video {
     display: none;
     z-index: 3;
     position: fixed;
-    left: calc(18% + 40px);
+    left: calc(18% + 28px);
     border-right: 1px solid rgb(247, 246, 240);
     background: rgb(247, 246, 240);
     width: 18%;
-    padding-right: 30px;
+    padding-right: 28px;
     height: 100vh;
     top: 0;
     .pressInner {
         background: rgb(247, 246, 240);
         width: 100%;
-        padding-right: 30px;
+        padding-right: 28px;
+        padding-left: 10px;
         border-right: 1px solid #dadbdd;
-        height: calc(100vh - 30px);
+        height: calc(100vh - 28px);
         position: relative;
         top: 10px;
         padding-top: 73px;
@@ -253,6 +255,8 @@ video {
             width: 100%;
             display: block;
             text-decoration: underline;
+            margin-bottom: 10px;
+            line-height: 1.3;
         }
 
     }
@@ -498,7 +502,7 @@ gap: 10px;
 }
 .projDescription {
     margin: 0 auto;
-    width: calc(100% - 40px);
+    width: calc(100% - 28px);
 
     
 }
@@ -571,7 +575,7 @@ gap: 10px;
     }
 
     .homepage{
-        width: calc(72% - 40px);
+        width: calc(72% - 28px);
     }
     .comCastingProj {
         width: calc(75% - 15px);
@@ -582,7 +586,7 @@ gap: 10px;
         width: 24%;
     }
     .castingWrapper {
-        width: calc(72% - 40px);
+        width: calc(72% - 28px);
         .castingText {
             margin-left: -25%;
         }
